force-app/main/default/objects/Customer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer&apos;s City</description>
    <inlineHelpText>Customer&apos;s City</inlineHelpText>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Araku</fullName>
                <default>true</default>
                <label>Araku</label>
            </value>
            <value>
                <fullName>Thirupathi</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Vellore</fullName>
            </value>
            <value>
                <fullName>Selam</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Thiruvalla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>