force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer&apos;s Email Id</description>
    <inlineHelpText>Customer&apos;s Email Id</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>