force-app/main/default/objects/Customer__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the customer</description>
    <inlineHelpText>First Name of the customer</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>