force-app/main/default/objects/Customer__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Customer&apos;s Last Name</description>
    <inlineHelpText>Customer&apos;s Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>