force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer&apos;s Phone Number</description>
    <inlineHelpText>Customer&apos;s Phone Number</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>