force-app/main/default/objects/Customer__c/fields/Revenue_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Revenue_By_Customer__c</fullName>
    <description>Total revenue generated by the customer for the business</description>
    <inlineHelpText>Total revenue generated by the customer for the business</inlineHelpText>
    <label>Revenue By Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>