force-app/main/default/objects/Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of the customer</description>
    <inlineHelpText>State of the customer</inlineHelpText>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Prasdesh</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>