force-app/main/default/objects/Customer__c/listViews/My_Customer_list.listView-meta.xml
<ListView>
    <fullName>My_Customer_list</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Revenue_By_Customer__c</columns>
    <columns>State__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>My Customer list</label>
</ListView>